--- a/เกี่ยวกับ.html
+++ b/เกี่ยวกับ.html
@@ -99,8 +99,8 @@
         </h3>
         <p class="ourGoals__text">
           We shall sell delicious and remarkable food and beverages that meet the highest quality, freshness, and
-          seasonality criteria while combining modern-creative and classic cooking traditions. By showcasing warmth,
-          graciousness, efficiency, skill, professionalism, and integrity in our work, we will continually serve our
+          seasonality criterighjkgjgjhgjghjgjtyutututukhjna while combining modern-creative and classic cooking traditions. By showcasing warmth,
+          graciousness,hjkhjkhkhk efficiency, skill, professionalism, and integrity in our work, we will continually serve our
           consumers with exceptional service. To have every customer who comes through our doors leave impressed by
           their experience at Shaif's Cuisine and excited to come back again.
         </p>
