--- a/foodm/ผัดกะเพราหมูสับ.html
+++ b/foodm/ผัดกะเพราหมูสับ.html
@@ -79,7 +79,7 @@
       <div class="ourStory__wrapper">
 
         <div class="ourStory__img">
-          <img src="../images/ผัดกะเพราหมูสับ3.webp" alt="shaif's cuisine">
+          <img src="../images/ผัดกระเพราหมูสับ2.jpg" alt="shaif's cuisine">
         </div>
         <div class="ourStory__info">
           <h3 class="ourStory__title">
@@ -125,13 +125,13 @@
       </div>
       <div class="ourGoals__imgs__wrapper" >
         <div class="ourGoals__img1">
-          <img src="../images/ผัดกะเพราหมูสับ3.webp" alt="kitchen img">
+          <img src="../images/ผัดกระเพราหมูสับ1.jpg" alt="kitchen img">
         </div>
         <div class="ourGoals__img2">
-          <img src="../images/ผัดกะเพราหมู.jpg" alt="kitchen img">
+          <img src="../images/ผัดกระเพราหมูสับ2.jpg" alt="kitchen img">
         </div>
         <div class="ourGoals__img3">
-          <img src="../images/ผัดกะเพราหมู1.jpg" alt="kitchen img">
+          <img src="../images/ผัดกระเพราหมูสับ3.jpg" alt="kitchen img">
         </div>
       </div>
     </div>
