--- a/ภาคกลาง.html
+++ b/ภาคกลาง.html
@@ -77,7 +77,7 @@
       <div class="ourSpecials__wrapper">
         <div class="ourSpecials__item">
           <div class="ourSpecials__item__img">
-            <img src="./images/anya.png" alt="food img">
+            <img src="./images/ผัดกระเพราหมูสับ3.jpg" alt="food img">
           </div>
           <div class="ourSpecials__item__info">
             <h3 class="ourSpecials__item__title">
