--- a/เกี่ยวกับ.html
+++ b/เกี่ยวกับ.html
@@ -45,7 +45,7 @@
             </div>
             <div class="nav__list__wrapper">
 
-              <li><a class="nav__link" href="./home.phpindex.php">Home</a></li>
+              <li><a class="nav__link" href="./home.php">Home</a></li>
               <li><a class="nav__link" href="./ภาคเหนือ.html">ภาคเหนือ</a></li>
               <li><a class="nav__link" href="./ภาคอีสาน.html">ภาคอีสาน</a></li>
               <li><a class="nav__link" href="./ภาคกลาง.html">ภาคกลาง</a></li>
