--- a/foodm/ต้มยำกุ้งน้ำข้น.html
+++ b/foodm/ต้มยำกุ้งน้ำข้น.html
@@ -79,7 +79,7 @@
       <div class="ourStory__wrapper">
 
         <div class="ourStory__img">
-          <img src="../images/ต้มยำกุ้งน้ำข้น.jpg" alt="shaif's cuisine">
+          <img src="../images/ต้มยํากุ้งน้ําข้น.jpg" alt="shaif's cuisine">
         </div>
         <div class="ourStory__info">
           <h3 class="ourStory__title">
@@ -136,13 +136,13 @@
       </div>
       <div class="ourGoals__imgs__wrapper" >
         <div class="ourGoals__img1">
-          <img src="../images/ต้มยำกุ้งน้ำข้น1.jpg" alt="kitchen img">
+          <img src="../images/ต้มยํากุ้งน้ําข้น1.jpg" alt="kitchen img">
         </div>
         <div class="ourGoals__img2">
-          <img src="../images/ต้มยำกุ้งน้ำข้น3.jpg" alt="kitchen img">
+          <img src="../images/ต้มยํากุ้งน้ําข้น2.jpg" alt="kitchen img">
         </div>
         <div class="ourGoals__img3">
-          <img src="../images/ต้มยำกุ้งน้ำข้น.jpg" alt="kitchen img">
+          <img src="../images/ต้มยํากุ้งน้ําข้น3.jpg" alt="kitchen img">
         </div>
       </div>
     </div>
