--- a/foodm/ต้มยำกุ้งน้ำข้น.html
+++ b/foodm/ต้มยำกุ้งน้ำข้น.html
@@ -79,7 +79,7 @@
       <div class="ourStory__wrapper">
 
         <div class="ourStory__img">
-          <img src="../images/ต้มยํากุ้งน้ําข้น.jpg" alt="shaif's cuisine">
+          <img src="../images/ต้มยํากุ้งน้ําข้น1.jpg" alt="shaif's cuisine">
         </div>
         <div class="ourStory__info">
           <h3 class="ourStory__title">
