--- a/ภาคกลาง.html
+++ b/ภาคกลาง.html
@@ -97,7 +97,7 @@
         </div>
         <div class="ourSpecials__item">
           <div class="ourSpecials__item__img">
-            <img src="./images/ต้มยํากุ้งน้ําข้น.jpg" alt="food img">
+            <img src="./images/ต้มยํากุ้งน้ําข้น1.jpg" alt="food img">
           </div>
           <div class="ourSpecials__item__info">
             <h3 class="ourSpecials__item__title">
