--- a/foodm/แกงมัสมั่นไก่.html
+++ b/foodm/แกงมัสมั่นไก่.html
@@ -133,7 +133,7 @@
           <img src="../images/แกงมัสมั่นไก่1.jpg" alt="kitchen img">
         </div>
         <div class="ourGoals__img2">
-          <img src="../images/แกงมัสมั่นไก่2.gif" alt="kitchen img">
+          <img src="../images/แกงมัสมั่นไก่.jpg" alt="kitchen img">
         </div>
         <div class="ourGoals__img3">
           <img src="../images/แกงมัสมั่นไก่3.jpg" alt="kitchen img">
