--- a/foodm/ต้มขาไก่.html
+++ b/foodm/ต้มขาไก่.html
@@ -129,13 +129,13 @@
       </div>
       <div class="ourGoals__imgs__wrapper" >
         <div class="ourGoals__img1">
-          <img src="../images/ต้มขาไก่2.jpg" alt="kitchen img">
+          <img src="../images/ต้มข่าไก่1.jpg" alt="kitchen img">
         </div>
         <div class="ourGoals__img2">
-          <img src="../images/ต้มขาไก่3.jpg" alt="kitchen img">
+          <img src="../images/ต้มข่าไก่2.jpg" alt="kitchen img">
         </div>
         <div class="ourGoals__img3">
-          <img src="../images/ต้มขาไก่1.jpg" alt="kitchen img">
+          <img src="../images/ต้มข่าไก่3.webp" alt="kitchen img">
         </div>
       </div>
     </div>
