--- a/foodm/ทอดมันปลากราย.html
+++ b/foodm/ทอดมันปลากราย.html
@@ -82,7 +82,7 @@
       <div class="ourStory__wrapper">
 
         <div class="ourStory__img">
-          <img src="../images/ทอดมันปลากราย1.jpg" alt="shaif's cuisine">
+          <img src="../images/ทอดมันปลากราย.jpg" alt="shaif's cuisine">
         </div>
         <div class="ourStory__info">
           <h3 class="ourStory__title">
@@ -138,10 +138,10 @@
       </div>
       <div class="ourGoals__imgs__wrapper" >
         <div class="ourGoals__img1">
-          <img src="../images/ทอดมันปลากราย3.png" alt="kitchen img">
+          <img src="../images/ทอดมันปลากราย1.jpg" alt="kitchen img">
         </div>
         <div class="ourGoals__img2">
-          <img src="../images/ทอดมันปลากราย2.jpg" alt="kitchen img">
+          <img src="../images/ทอดมันปลากราย2.webp" alt="kitchen img">
         </div>
         <div class="ourGoals__img3">
           <img src="../images/ทอดมันปลากราย3.png" alt="kitchen img">
