--- a/foodm/หมูทอดกระเทียม.html
+++ b/foodm/หมูทอดกระเทียม.html
@@ -85,7 +85,7 @@
       <div class="ourStory__wrapper">
 
         <div class="ourStory__img">
-          <img src="../images/หมูทอดกระเทียม.jpeg" alt="shaif's cuisine">
+          <img src="../images/หมูทอดกระเทียม.jpg" alt="shaif's cuisine">
         </div>
         <div class="ourStory__info">
           <h3 class="ourStory__title">
