--- a/ภาคกลาง.html
+++ b/ภาคกลาง.html
@@ -180,7 +180,7 @@
       <div class="dishGrid__wrapper">
         <div class="dishGrid__item">
           <div class="dishGrid__item__img">
-            <img src="./images/แกงเขียวหวาน.jpeg" alt="food img">
+            <img src="./images/แกงเขียวหวาน.jpg" alt="food img">
           </div>
           <div class="dishGrid__item__info">
             <h3 class="dishGrid__item__title">
@@ -193,7 +193,7 @@
         </div>
         <div class="dishGrid__item">
           <div class="dishGrid__item__img">
-            <img src="./images/หมูสะเต็ะ.jpg" alt="food img">
+            <img src="./images/หมูสะเต๊ะ.jpg" alt="food img">
           </div>
           <div class="dishGrid__item__info">
             <h3 class="dishGrid__item__title">
@@ -206,7 +206,7 @@
         </div>
         <div class="dishGrid__item">
           <div class="dishGrid__item__img">
-            <img src="./images/ต้มขาไก่1.jpg" alt="food img">
+            <img src="./images/ต้มข่าไก่.jpg" alt="food img">
           </div>
           <div class="dishGrid__item__info">
             <h3 class="dishGrid__item__title">
@@ -219,7 +219,7 @@
         </div>
         <div class="dishGrid__item">
           <div class="dishGrid__item__img">
-            <img src="./images/ทอดมันปลากราย.jpeg" alt="food img">
+            <img src="./images/ทอดมันปลากราย.jpg" alt="food img">
           </div>
           <div class="dishGrid__item__info">
             <h3 class="dishGrid__item__title">
@@ -232,7 +232,7 @@
         </div>
         <div class="dishGrid__item">
           <div class="dishGrid__item__img">
-            <img src="./images/หมูทอดกระเทียม.jpeg" alt="food img">
+            <img src="./images/หมูทอดกระเทียม.jpg" alt="food img">
           </div>
           <div class="dishGrid__item__info">
             <h3 class="dishGrid__item__title">
