--- a/foodm/หมูสะเต๊ะ.html
+++ b/foodm/หมูสะเต๊ะ.html
@@ -90,7 +90,7 @@
       <div class="ourStory__wrapper">
 
         <div class="ourStory__img">
-          <img src="../images/หมูสะเต็ะ.jpg" alt="shaif's cuisine">
+          <img src="../images/หมูสะเต๊ะ.jpg" alt="shaif's cuisine">
         </div>
         <div class="ourStory__info">
           <h3 class="ourStory__title">
@@ -136,13 +136,13 @@
       </div>
       <div class="ourGoals__imgs__wrapper" >
         <div class="ourGoals__img1">
-          <img src="../images/หมูสะเต็ะ1.jpeg" alt="kitchen img">
+          <img src="../images/หมูสะเต๊ะ1.jpg" alt="kitchen img">
         </div>
         <div class="ourGoals__img2">
-          <img src="../images/หมูสะเต็ะ2.jpg" alt="kitchen img">
+          <img src="../images/หมูสะเต๊ะ2.jpg" alt="kitchen img">
         </div>
         <div class="ourGoals__img3">
-          <img src="../images/หมูสะเต็ะ3.jpg" alt="kitchen img">
+          <img src="../images/หมูสะเต๊ะ3.webp" alt="kitchen img">
         </div>
       </div>
     </div>
