--- a/foodm/แกงเขียวหวาน.html
+++ b/foodm/แกงเขียวหวาน.html
@@ -82,7 +82,7 @@
       <div class="ourStory__wrapper">
 
         <div class="ourStory__img">
-          <img src="../images/แกงเขียวหวาน.jpeg" alt="shaif's cuisine">
+          <img src="../images/แกงเขียวหวาน.jpg" alt="shaif's cuisine">
         </div>
         <div class="ourStory__info">
           <h3 class="ourStory__title">
