--- a/foodm/ทอดมันปลากราย.html
+++ b/foodm/ทอดมันปลากราย.html
@@ -138,7 +138,7 @@
       </div>
       <div class="ourGoals__imgs__wrapper" >
         <div class="ourGoals__img1">
-          <img src="../images/ทอดมันปลากราย1.jpg" alt="kitchen img">
+          <img src="../images/ทอดมันปลากราย.jpg" alt="kitchen img">
         </div>
         <div class="ourGoals__img2">
           <img src="../images/ทอดมันปลากราย2.webp" alt="kitchen img">
