--- a/foodm/หมูสะเต๊ะ.html
+++ b/foodm/หมูสะเต๊ะ.html
@@ -6,7 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="../images/anya.png" type="image/x-icon">
-  <title><!DOCTYPE html>
+  <title>หมูสะเต๊ะ</title>
+  <link rel="stylesheet" href="../reset.css">
+  <link rel="stylesheet" href="../globalStyles.css">
+  <link rel="stylesheet" href="../components.css">
+  <!-- aos library css  -->
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <link rel="stylesheet" href="../about.css">
 <html lang="en">
 
 <head>
