--- a/foodm/ต้มขาไก่.html
+++ b/foodm/ต้มขาไก่.html
@@ -82,7 +82,7 @@
       <div class="ourStory__wrapper">
 
         <div class="ourStory__img">
-          <img src="../images/ต้มขาไก่.jpg" alt="shaif's cuisine">
+          <img src="../images/ต้มข่าไก่.jpg" alt="shaif's cuisine">
         </div>
         <div class="ourStory__info">
           <h3 class="ourStory__title">
