--- a/ภาคใต้.html
+++ b/ภาคใต้.html
@@ -66,46 +66,54 @@
   <section id="page__title" data-aos="fade-up">
     <div class="container">
       <h2 class="page__title__text">
-        Explore Our Menu
+        SOUTH Memu
       </h2>
     </div>
   </section>
   <!-- Our Specials -->
   <section id="ourSpecials" data-aos="fade-up">
     <div class="container">
-      <h3 class="ourSpecials__title">Our Specials</h3>
+      <h3 class="ourSpecials__title">เมนูพิเศษ</h3>
       <div class="ourSpecials__wrapper">
         <div class="ourSpecials__item">
           <div class="ourSpecials__item__img">
-            <img src="./images/anya.png" alt="food img">
+            <img src="./images/ผัดสะตอกุ้งสด.webp" alt="food img">
           </div>
           <div class="ourSpecials__item__info">
             <h3 class="ourSpecials__item__title">
-              แกงเขียวหวาน
+              ผัดสะตอกุ้งสด
             </h3>
-            <h4 class="ourSpecials__item__price">รสชาติ</h4>
-            <h4 class="ourSpecials__item__price">วิธีการทำ</h4>
-            <h4 class="ourSpecials__item__price">อุปกรณ์</h4>
-            <div class="ourSpecials__food__item">1.กะทิ<br>
-                2.กะปิhjkhjk
+            <div class="ourSpecials__food__item">เมนูอาหารชื่อดังของภาคใต้ 
+              รสชาติเข้มข้นเผ็ดร้อน หอมอร่อยจัดจ้าน กุ้งหวานๆ ผัดกับสะตอกรุบกรอบๆ 
+              หอมพริกแกงสมุนไพรต่างๆ หอมกะปิมาก 
+              รับประทานกับข้าวสวยร้อนๆ หอมอร่อยเข้ากันมาก
+
+              
             </div>
-            <div class="ourSpecials__item__stars">
-              <img src="./images/3star.png" alt="3 stars">
-            </div>
+            <div class="button__wrapper">
+              <a href="./foods/ผัดสะตอกุ้งสด.html" class="btn primary-btn" target="_blank">More...</a>
+            </div>            
           </div>
         </div>
         <div class="ourSpecials__item">
           <div class="ourSpecials__item__img">
-            <img src="./images/food-1.png" alt="food img">
+            <img src="./images/คั่วกลิ้งหมู.jpg" alt="food img">
           </div>
           <div class="ourSpecials__item__info">
             <h3 class="ourSpecials__item__title">
-              Vegan Salad bowl
+              คั่วกลิ้งหมู
             </h3>
-            <h4 class="ourSpecials__item__price">$12</h4>
-            <div class="ourSpecials__item__stars">
-              <img src="./images/3star.png" alt="3 stars">
+            <div class="ourSpecials__food__item">คั่วกลิ้ง เป็นอาหารพื้นบ้านภาคใต้ 
+              เป็นการนำเนื้อสัตว์ เช่น หมู ไก่ เนื้อวัว มาคั่วกับเครื่องแกงจนแห้ง และเข้าเนื้อ รสจัด 
+              และเข้มข้น นิยมรับประทานคู่กับผักสด เช่นเดียวกับ ลาบของภาคอื่นๆ ที่เรียกว่า คั่วกลิ้ง 
+              มาจากวิธีทำที่ต้องคั่วส่วนผสมกลิ้งไปกลิ้งมาบนกระทะจนแห้งได้ที่<br>
             </div>
+            <div class="button__wrapper">
+              <a href="./foods/คั่วกลิ้งหมู.html" class="btn primary-btn" target="_blank">More...</a>
+            </div>
+            <!-- <div class="ourSpecials__item__stars">
+              <img src="./images/3star.png" alt="3 stars">
+            </div> -->
           </div>
         </div>
       </div>
@@ -116,49 +124,46 @@
   <section id="dishGrid" data-aos="fade-down">
     <div class="container">
       <h2 class="dishGrid__title">
-        Top Dishes
+        อาหารที่แนะนำ
       </h2>
       <div class="dishGrid__wrapper">
         <div class="dishGrid__item">
           <div class="dishGrid__item__img">
-            <img src="./images/food-1.png" alt="food img">
+            <img src="./images/ผัดสะตอสามรส1.jpg" alt="food img">
           </div>
           <div class="dishGrid__item__info">
             <h3 class="dishGrid__item__title">
-              Hot Green Bowl
+              ผัดสะตอสามรส
             </h3>
-            <h3 class="dishGrid__item__price">$12</h3>
-            <div class="dishGrid__item__stars">
-              <img src="./images/3star.png" alt="3 star">
+            <div class="button__wrapper">
+              <a href="./foods/ผัดสะตอสามรส.html" class="btn primary-btn" target="_blank">More...</a>
             </div>
           </div>
         </div>
         <div class="dishGrid__item">
           <div class="dishGrid__item__img">
-            <img src="./images/food-1.png" alt="food img">
+            <img src="./images/แกงมัสมั่นไก่.jpg" alt="food img">
           </div>
           <div class="dishGrid__item__info">
             <h3 class="dishGrid__item__title">
-              Hot Green Bowl
+              แกงมัสมั่นไก่<br>
             </h3>
-            <h3 class="dishGrid__item__price">$12</h3>
-            <div class="dishGrid__item__stars">
-              <img src="./images/3star.png" alt="3 star">
-            </div>
+            <div class="button__wrapper">
+              <a href="./foodm/แกงมัสมั่นไก่.html" class="btn primary-btn" target="_blank">More...</a>
+            </div>                     
           </div>
         </div>
         <div class="dishGrid__item">
           <div class="dishGrid__item__img">
-            <img src="./images/food-1.png" alt="food img">
+            <img src="./images/น้ำพริกกะปิ.jpg" alt="food img">
           </div>
           <div class="dishGrid__item__info">
             <h3 class="dishGrid__item__title">
-              Hot Green Bowl
+              น้ำพริกกะปิ
             </h3>
-            <h3 class="dishGrid__item__price">$12</h3>
-            <div class="dishGrid__item__stars">
-              <img src="./images/3star.png" alt="3 star">
-            </div>
+            <div class="button__wrapper">
+              <a href="./foodm/น้ำพริกกะปิ.html" class="btn primary-btn" target="_blank">More...</a>
+            </div>             
           </div>
         </div>
       </div>
@@ -169,76 +174,71 @@
   <section id="dishGrid" data-aos="fade-up">
     <div class="container">
       <h2 class="dishGrid__title">
-        Breakfast
+        อาหารทั่วไป
       </h2>
       <div class="dishGrid__wrapper">
         <div class="dishGrid__item">
           <div class="dishGrid__item__img">
-            <img src="./images/food-1.png" alt="food img">
+            <img src="./images/แกงเขียวหวาน.jpg" alt="food img">
           </div>
           <div class="dishGrid__item__info">
             <h3 class="dishGrid__item__title">
-              Hot Green Bowl
+              แกงเขียวหวาน
             </h3>
-            <h3 class="dishGrid__item__price">$12</h3>
-            <div class="dishGrid__item__stars">
-              <img src="./images/3star.png" alt="3 star">
+            <div class="button__wrapper">
+              <a href="./foodm/แกงเขียวหวาน.html" class="btn primary-btn" target="_blank">More...</a>
+            </div>  
+          </div>
+        </div>
+        <div class="dishGrid__item">
+          <div class="dishGrid__item__img">
+            <img src="./images/หมูสะเต๊ะ.jpg" alt="food img">
+          </div>
+          <div class="dishGrid__item__info">
+            <h3 class="dishGrid__item__title">
+              หมูสะเต๊ะ
+            </h3>
+            <div class="button__wrapper">
+              <a href="./foodm/หมูสะเต๊ะ.html" class="btn primary-btn" target="_blank">More...</a>
+            </div> 
+          </div>
+        </div>
+        <div class="dishGrid__item">
+          <div class="dishGrid__item__img">
+            <img src="./images/ต้มข่าไก่.jpg" alt="food img">
+          </div>
+          <div class="dishGrid__item__info">
+            <h3 class="dishGrid__item__title">
+              ต้มข่าไก่
+            </h3>
+            <div class="button__wrapper">
+              <a href="./foodm/ต้มขาไก่.html" class="btn primary-btn" target="_blank">More...</a>
             </div>
           </div>
         </div>
         <div class="dishGrid__item">
           <div class="dishGrid__item__img">
-            <img src="./images/food-1.png" alt="food img">
+            <img src="./images/ทอดมันปลากราย.jpg" alt="food img">
           </div>
           <div class="dishGrid__item__info">
             <h3 class="dishGrid__item__title">
-              Hot Green Bowl
+              ทอดมันปลากราย
             </h3>
-            <h3 class="dishGrid__item__price">$12</h3>
-            <div class="dishGrid__item__stars">
-              <img src="./images/3star.png" alt="3 star">
+            <div class="button__wrapper">
+              <a href="./foodm/ทอดมันปลากราย.html" class="btn primary-btn" target="_blank">More...</a>
             </div>
           </div>
         </div>
         <div class="dishGrid__item">
           <div class="dishGrid__item__img">
-            <img src="./images/food-1.png" alt="food img">
+            <img src="./images/หมูทอดกระเทียม.jpg" alt="food img">
           </div>
           <div class="dishGrid__item__info">
             <h3 class="dishGrid__item__title">
-              Hot Green Bowl
+              หมูทอดกระเทียม
             </h3>
-            <h3 class="dishGrid__item__price">$12</h3>
-            <div class="dishGrid__item__stars">
-              <img src="./images/3star.png" alt="3 star">
-            </div>
-          </div>
-        </div>
-        <div class="dishGrid__item">
-          <div class="dishGrid__item__img">
-            <img src="./images/food-1.png" alt="food img">
-          </div>
-          <div class="dishGrid__item__info">
-            <h3 class="dishGrid__item__title">
-              Hot Green Bowl
-            </h3>
-            <h3 class="dishGrid__item__price">$12</h3>
-            <div class="dishGrid__item__stars">
-              <img src="./images/3star.png" alt="3 star">
-            </div>
-          </div>
-        </div>
-        <div class="dishGrid__item">
-          <div class="dishGrid__item__img">
-            <img src="./images/food-1.png" alt="food img">
-          </div>
-          <div class="dishGrid__item__info">
-            <h3 class="dishGrid__item__title">
-              Hot Green Bowl
-            </h3>
-            <h3 class="dishGrid__item__price">$12</h3>
-            <div class="dishGrid__item__stars">
-              <img src="./images/3star.png" alt="3 star">
+            <div class="button__wrapper">
+              <a href="./foodm/หมูทอดกระเทียม.html" class="btn primary-btn" target="_blank">More...</a>
             </div>
           </div>
         </div>
@@ -247,7 +247,7 @@
   </section>
   <!-- End Breakfast Dishes -->
   <!-- Lunch Dishes -->
-  <section id="dishGrid" data-aos="fade-up">
+  <!-- <section id="dishGrid" data-aos="fade-up">
     <div class="container">
       <h2 class="dishGrid__title">
         Lunch
@@ -325,10 +325,10 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- End Lunch Dishes -->
   <!-- Dinner Dishes -->
-  <section id="dishGrid" data-aos="fade-up">
+  <!-- <section id="dishGrid" data-aos="fade-up">
     <div class="container">
       <h2 class="dishGrid__title">
         Dinner
@@ -406,7 +406,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- End Dinner Dishes -->
   <!-- Footer -->
   <footer>
