--- a/ภาคใต้.html
+++ b/ภาคใต้.html
@@ -142,27 +142,27 @@
         </div>
         <div class="dishGrid__item">
           <div class="dishGrid__item__img">
-            <img src="./images/แกงมัสมั่นไก่.jpg" alt="food img">
+            <img src="./images/แกงเหลืองมะละกอกุ้ง.jpg" alt="food img">
           </div>
           <div class="dishGrid__item__info">
             <h3 class="dishGrid__item__title">
-              แกงมัสมั่นไก่<br>
+              แกงเหลืองมะละกอกุ้ง<br>
             </h3>
             <div class="button__wrapper">
-              <a href="./foodm/แกงมัสมั่นไก่.html" class="btn primary-btn" target="_blank">More...</a>
+              <a href="./foods/แกงเหลืองมะละกอกุ้ง.html" class="btn primary-btn" target="_blank">More...</a>
             </div>                     
           </div>
         </div>
         <div class="dishGrid__item">
           <div class="dishGrid__item__img">
-            <img src="./images/น้ำพริกกะปิ.jpg" alt="food img">
+            <img src="./images/แกงไตปลา.jpg" alt="food img">
           </div>
           <div class="dishGrid__item__info">
             <h3 class="dishGrid__item__title">
-              น้ำพริกกะปิ
+              แกงไตปลา
             </h3>
             <div class="button__wrapper">
-              <a href="./foodm/น้ำพริกกะปิ.html" class="btn primary-btn" target="_blank">More...</a>
+              <a href="./foods/แกงไตปลา.html" class="btn primary-btn" target="_blank">More...</a>
             </div>             
           </div>
         </div>
@@ -179,40 +179,40 @@
       <div class="dishGrid__wrapper">
         <div class="dishGrid__item">
           <div class="dishGrid__item__img">
-            <img src="./images/แกงเขียวหวาน.jpg" alt="food img">
+            <img src="./images/ไก่กอและ.webp" alt="food img">
           </div>
           <div class="dishGrid__item__info">
             <h3 class="dishGrid__item__title">
-              แกงเขียวหวาน
+              ไก่กอและ
             </h3>
             <div class="button__wrapper">
-              <a href="./foodm/แกงเขียวหวาน.html" class="btn primary-btn" target="_blank">More...</a>
+              <a href="./foods/ไก่กอและ.html" class="btn primary-btn" target="_blank">More...</a>
             </div>  
           </div>
         </div>
         <div class="dishGrid__item">
           <div class="dishGrid__item__img">
-            <img src="./images/หมูสะเต๊ะ.jpg" alt="food img">
+            <img src="./images/แกงเหลืองปลากะพง.jpg" alt="food img">
           </div>
           <div class="dishGrid__item__info">
             <h3 class="dishGrid__item__title">
-              หมูสะเต๊ะ
+              แกงเหลืองปลากะพง
             </h3>
             <div class="button__wrapper">
-              <a href="./foodm/หมูสะเต๊ะ.html" class="btn primary-btn" target="_blank">More...</a>
+              <a href="./foods/แกงเหลืองปลากะพง.html" class="btn primary-btn" target="_blank">More...</a>
             </div> 
           </div>
         </div>
         <div class="dishGrid__item">
           <div class="dishGrid__item__img">
-            <img src="./images/ต้มข่าไก่.jpg" alt="food img">
+            <img src="./images/หมูโค๊ะ.jpg" alt="food img">
           </div>
           <div class="dishGrid__item__info">
             <h3 class="dishGrid__item__title">
-              ต้มข่าไก่
+              หมูโค๊ะ
             </h3>
             <div class="button__wrapper">
-              <a href="./foodm/ต้มขาไก่.html" class="btn primary-btn" target="_blank">More...</a>
+              <a href="./foods/หมูโค๊ะ.html" class="btn primary-btn" target="_blank">More...</a>
             </div>
           </div>
         </div>
