--- a/เกี่ยวกับ.html
+++ b/เกี่ยวกับ.html
@@ -66,24 +66,19 @@
       <div class="ourStory__wrapper">
 
         <div class="ourStory__img">
-          <img src="./images/ourStoryImg.png" alt="shaif's cuisine">
+          <img src="./images/อาหาร4ภาค1.jpg" alt="shaif's cuisine">
         </div>
         <div class="ourStory__info">
           <h3 class="ourStory__title">
-            Our Story
+            อาหารไทย
           </h3>
           <p class="ourStory__subtitle">
-            It's all started since 1998
+            4 ภาค
           </p>
           <p class="ourStory__text">
-            Welcome to Shaif's Cuisine. We take pride in delivering warm, friendly service and creating mouth-watering
-            culinary delights for all. Using only the freshest locally sourced ingredients, we’ll ensure you have a
-            dining
-            experience to remember.
+            อาหารไทยมีมากมายหลากหลายเมนู ทั้งเป็นที่รู้จักโดยทั่วไปและอาจจะไม่เคยได้ยินชื่อเสียงเรียงนามของเมนูนั้นๆ มาก่อนเลยก็ได้ ยิ่งหากเป็นอาหารไทยทั้ง 4 ภาคแล้ว…เหนือ กลาง อีสาน และใต้ ความอร่อยของแต่ละท้องถิ่นย่อมแตกต่างกันไปตามวัฒนธรรมและประเพณีแต่เก่าก่อน 
             <br><br>
-            Since 1998, we are the perfect place for a romantic meal for two, a catch-up with friends, family parties,
-            business meetings, and bringing loved ones together. With comfortable surroundings, affordable prices, and
-            seating for up to 65 guests, we can cater for all occasions.
+            
           </p>
         </div>
       </div>
@@ -95,25 +90,24 @@
     <div class="container">
       <div class="ourGoals__info">
         <h3 class="ourGoals__title">
-          Our Goals
+          อาหารแต่ละภาค
         </h3>
         <p class="ourGoals__text">
-          We shall sell delicious and remarkable food and beverages that meet the highest quality, freshness, and
-          seasonality criterighjkgjgjhgjghjgjtyutututukhjna while combining modern-creative and classic cooking traditions. By showcasing warmth,
-          graciousness,hjkhjkhkhk efficiency, skill, professionalism, and integrity in our work, we will continually serve our
-          consumers with exceptional service. To have every customer who comes through our doors leave impressed by
-          their experience at Shaif's Cuisine and excited to come back again.
+          อาหารภาคเหนือ: แกงอ่อมเนื้อ  น้ำพริกหนุ่ม  ขนมจีนน้ำเงี้ยว<br>
+            อาหารภาคอีสาน: ส้มตำไทยไข่เค็ม  ลาบหมู  ไส้กรอกอีสาน<br>
+            อาหารภาคกลาง: ผัดกะเพราหมูสับ  ต้มยำกุ้งน้ำข้น  แกงเทโพ<br>
+            อาหารภาคใต้: ผัดสะตอกุ้งสด  คั่วกลิ้งหมู  แกงไตปลา<br>
         </p>
       </div>
       <div class="ourGoals__imgs__wrapper" data-aos="fade-up">
         <div class="ourGoals__img1">
-          <img src="./images/ourGoals_img1.png" alt="kitchen img">
+          <img src="./images/ส้มคำไทยไข่เค็ม.jpg" alt="kitchen img">
         </div>
         <div class="ourGoals__img2">
-          <img src="./images/ourGoals_img2.png" alt="kitchen img">
+          <img src="./images/แกงเทโพ.jpg" alt="kitchen img">
         </div>
         <div class="ourGoals__img3">
-          <img src="./images/ourGoals_img3.png" alt="kitchen img">
+          <img src="./images/แกงไตปลา1.jpg" alt="kitchen img">
         </div>
       </div>
     </div>
@@ -125,16 +119,16 @@
       <div class="footer__wrapper">
         <div class="footer__col1">
           <div class="footer__logo">
-            <img src="./images/logo.svg" alt="shaif's cuisine">
+            <img src="./images/anya.png" alt="shaif's cuisine">
           </div>
           <p class="footer__desc">
-            Fresh and delicious traditional Bangladeshi food to delight the whole family.
+            เว็บไซค์เพื่อการเรียนรู้<br>ด้านอาหาร 4 ภาคของประเทศไทย
           </p>
           <div class="footer__socials">
             <h4 class="footer__socials__title">Follow us</h4>
             <ol class="footer__socials__list">
               <li>
-                <a href="#">
+                <a href="https://www.facebook.com/profile.php?id=100007748142493" target="_blank">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                     stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"
                     class="feather feather-facebook">
@@ -142,7 +136,7 @@
                   </svg>
                 </a>
               </li>
-              <li>
+              <!-- <li>
                 <a href="#">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                     stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"
@@ -152,8 +146,8 @@
                     <line x1="17.5" y1="6.5" x2="17.51" y2="6.5" />
                   </svg>
                 </a>
-              </li>
-              <li>
+              </li> -->
+              <!-- <li>
                 <a href="#">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                     stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"
@@ -162,7 +156,7 @@
                       d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z" />
                   </svg>
                 </a>
-              </li>
+              </li> -->
             </ol>
           </div>
         </div>
@@ -172,22 +166,22 @@
           </h3>
           <ol class="footer__text">
             <li>
-              <a href="/index.html">Home</a>
+              <a href="./home.php">Home</a>
             </li>
             <li>
-              <a href="./menu.html">Menu</a>
+              <a href="./ภาคเหนือ.html">ภาคเหนือ</a>
             </li>
             <li>
-              <a href="./booking.html">Book Table</a>
+              <a href="./ภาคอีสาน.html">ภาคอีสาน</a>
             </li>
             <li>
-              <a href="./about.html">About Us</a>
+              <a href="./ภาคกลาง.html">ภาคกลาง</a>
             </li>
             <li>
-              <a href="./contact.html">contact Us</a>
+              <a href="./ภาคใต้.html">ภาคใต้</a>
             </li>
             <li>
-              <a href="#">Privacy Policy</a>
+              <a href="เกี่ยวกับ.html">เกี่ยวกับ</a>
             </li>
           </ol>
         </div>
@@ -197,14 +191,14 @@
           </h3>
           <ol class="footer__text">
             <li>
-              <a href="#">Contact</a>
+              <a href="./contact.html">Contact</a>
             </li>
             <li>
-              <a href="#">Support Center</a>
+              <a href="./เกี่ยวกับ.html">เกี่ยวกับ</a>
             </li>
-            <li>
+            <!-- <li>
               <a href="#">Feedback</a>
-            </li>
+            </li> -->
           </ol>
         </div>
         <div class="footer__col4">
@@ -213,13 +207,13 @@
           </h3>
           <ol class="footer__text">
             <li>
-              <a href="#">+880123</a>
+              <a href="#">+66 0968054317</a>
             </li>
             <li>
-              <a href="#">webcifar@gmail.com</a>
+              <a href="#">CH.Chanonlien@gmail.com</a>
             </li>
             <li>
-              <a href="#">GEC Circle, Chittagong, Bangladesh</a>
+              <a href="#">SB-TECH</a>
             </li>
           </ol>
         </div>
